--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-
+<div class="settings">
 <div class="panel-group" id="accordion">
   <div class="panel panel-default" id="workout">
   	<div class="panel-heading">
-  		<h2><a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-    	Workout Settings:</a></h2>
+  		<h2>Workout Settings <a data-toggle="collapse" data-parent="#accordion" href="#collapse1"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true" style='float:right'></span>
+    	</a></h2>
     </div>
 
     <div id="collapse1" class="panel-collapse collapse in" data-toggle="button">
@@ -91,14 +91,17 @@
 </div><!--panel-collapse-->
 </div><!--panel-->
 </div><!--panel-group-->
+</div><!--settings-->
+<div class="main">
+
 <div id="message">Start your workout!</div>
 
 <div id="timerSection">
-	<span id="timer"></span>
-	  	<button onclick="Timer.reverseTimer()" class="btn btn-default">Change time display</button>
+	<div id="timer"></div>
+	  	<button onclick="Timer.reverseTimer()" id="reverseTimer" class="btn btn-lg btn-default">Countdown</button>
 <div>
-	<button onclick="Timer.startTimer()" id="startButton" class="btn btn-default">Start</button>
-	<button onclick="Timer.pauseTimer()" id="pauseButton" class="btn btn-">Pause</button>
+	<button onclick="Timer.startTimer()" id="startButton" class="btn btn-lg btn-default">Start</button>
+	<button onclick="Timer.pauseTimer()" id="pauseButton" class="btn btn-lg btn-default">Pause</button>
 </div></div>
 
 <h3>Your Goal:</h3><span id="goal"></span>
@@ -107,10 +110,13 @@
 <div id="type"></div>
 
 
-
+</div><!---main-->
 
      <script src='https://code.jquery.com/jquery-2.2.0.min.js'></script>
        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
-    <script src="./main.js"></script>
+    <script src="./timer.js"></script>
+    <script src="./workout.js"></script>
+    <script src="./alarm.js"></script>
+
 	</body>
