added a reset timer button

--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
 <div>
 	<button onclick="Timer.startTimer()" id="startButton" class="btn btn-lg btn-default">Start</button>
 	<button onclick="Timer.pauseTimer()" id="pauseButton" class="btn btn-lg btn-default">Pause</button>
-</div></div>
+</div>
+	<button onclick="Timer.resetTimer()" id="resetButton" class="btn btn-default">Reset Timer</button>
+
+</div>
 
 <h3>Your Goal:</h3><span id="goal"></span>
 <h3>Your chosen workout:</h3>
