--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="collapse1" class="panel-collapse collapse in" data-toggle="button">
       <div class="panel-body">
 
-
+<!--Total Time -->
       	<h3>Choose your workout goal</h3>
       	<div class="radio" id="setGoal">
   		<div class="row" >
@@ -52,7 +52,7 @@
   	</div>
 </div>
 
- 
+ <!--Workout Type -->
   			<h3>
     		Choose your workout type</h3>
     		<div class="radio" id="setType">
@@ -90,6 +90,8 @@
         		<div class="col-xs-6 col-sm-4">
     			</div>
   			</div></div>
+
+<!--Difficulty-->
   			<h3>Choose your difficulty</h3>
   			<div class="radio" id="setDifficulty">
   			<div class="row">
@@ -144,13 +146,17 @@
 
 <!--end of Modal-->
 
+<!--Message-->
 <div id="message">Start your workout at level 3
 
 </div>
+
+<!--Modal Button -->
 <div id="modalButtonSection">
 <button type="button" id="modalButton" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">Save your workout results</button>
 </div>
 
+<!--timer-->
 <div id="timerSection">
 	<span id="timer"></span>
 	  	<button onclick="Timer.reverseTimer()" id="reverseTimer" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-refresh"></span></button>
