changed style of buttons

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   		<div class="row" >
 
     		<div class="col-xs-6 col-sm-4">
-  					<label><input type="radio" name="setGoal" checked="true" onclick="Workout.setGoal(10)">10 minutes</label>
+  					<label><input type="radio" class="radioButton" name="setGoal" checked="true" onclick="Workout.setGoal(10)">10 minutes</label>
     		</div>
         	<div class="col-xs-6 col-sm-4">
   					<label><input type="radio" name="setGoal" onclick="Workout.setGoal(15)">15 minutes</label>
