trying to make the code clearer

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+<!---Workout Settings Panel-->
 <div class="settings">
 <div class="panel-group" id="accordion">
   <div class="panel panel-default" id="workout">
@@ -25,7 +26,7 @@
     <div id="collapse1" class="panel-collapse collapse in" data-toggle="button">
       <div class="panel-body">
 
-<!--Total Time -->
+  <!--Total Time -->
       	<h3>Choose your workout goal</h3>
       	<div class="radio" id="setGoal">
   		<div class="row" >
@@ -52,7 +53,7 @@
   	</div>
 </div>
 
- <!--Workout Type -->
+   <!--Workout Type -->
   			<h3>
     		Choose your workout type</h3>
     		<div class="radio" id="setType">
@@ -91,7 +92,7 @@
     			</div>
   			</div></div>
 
-<!--Difficulty-->
+  <!--Difficulty-->
   			<h3>Choose your difficulty</h3>
   			<div class="radio" id="setDifficulty">
   			<div class="row">
@@ -109,11 +110,14 @@
 </div><!--panel-collapse-->
 </div><!--panel-->
 </div><!--panel-group-->
-</div><!--settings-->
+</div>
+<!--end of settings panel-->
+
+
 <div class="main">
 
-<!--modal-->
 
+<!--modal: workout results-->
 <div id="myModal" class="modal fade" role="dialog">
   <div class="modal-dialog">
 
@@ -174,7 +178,7 @@
 <div id="type"></div>
 
 
-</div><!---main-->
+</div><!--- end of main-->
 
 
      <script src='https://code.jquery.com/jquery-2.2.0.min.js'></script>
